Package: doFuture
=================

Version: 0.6.0-9000 [2019-01-05]

NEW FEATURES:

 o The maximum total size of globals allowed (option 'future.globals.maxSize')
   per future ("chunk") is now scaled up by the number of elements processed by
   the future ("chunk") making the protection approximately invariant to the
   amount of chunking done by foreach.
   
 o Added support for option 'doFuture.foreach.export = "manual", which will
   strictly follow argument '.export' of foreach() for identifying global
   variables.  None of the future+globals framework for identifying global
   variables will be used. This is useful for asserting that the '.export'
   argument is correct.

DOCUMENTATION:

 o Added section on Random Number Generation (RNG) to help("doFuture") and
   updated example("doFuture") with a best-practices RNG example.

SOFTWARE QUALITY:

 o TESTS: The opt-in tests for third-party packages now run their examples
   with example(..., run.dontrun = TRUE) to cover even more use cases.

 o TESTS: Added future.callr to the backend opt-in tested with plyr.

BUG FIXES:

 o If the 'doFuture' package is missing on a worker, an error on
   'length(results) == nbr_of_elements is not TRUE' would be produced.
   Now a more informative error is produced.

 o foreach(..., .export) with '.export' containing "..." would produce an
   error when using globals (<= 0.11.0).

 o foreach() would not relay captured conditions as provided by
   future (>= 0.11.0).

DEPRECATED:

 o Previously deprecated option 'doFuture.foreach.nullexport' is defunct.

 o Option 'doFuture.foreach.export' values 'automatic-unless-export' and
   'automatic' are defunct and will fall back to 'export-and-automatic'.


Version: 0.6.0 [2017-10-17]

NEW FEATURES:

 o doFuture now respects option 'future.globals.resolve' instead of being
   hardcoded to always resolve globals (future.globals.resolve = TRUE).
   This makes doFuture consistent with other future frontends.
